--- a/css/style.css
+++ b/css/style.css
@@ -682,8 +682,8 @@ a:hover {
   flex-wrap: wrap;
   width: 100%;
   height: 100px;
-  position: sticky;
-  top: 0px;
+  position: absolute;
+  top: 1350px;
   max-width: 100%;
 }
 .ai-1 {
