--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,6 @@ body {
   gap: 10px;
   width: 100%;
   position: absolute;
-
   top: 0px;
 }
 
@@ -135,7 +134,7 @@ body {
 .portfolio {
   flex-shrink: 0;
   width: 100%;
-  height: 100%;
+  height: 70px;
   position: absolute;
   overflow: visible;
 }
